# NSTstats

./: .env  .gitignore  BarDownPool_2526.xlsx  LeagueSettings_105618.xlsx  NatePts.xlsx  PROCESS.md  README.md  Team2TM.xlsx  Weeks.xlsx  alembic.ini  app.py  config.py  debug_yahoo_xml.py  goalies.csv  main.py  manage.py  pipelines.py  player_registry.csv  pyproject.toml  rsd_wklygp_dataPop_wk1thru8.txt  skaters.csv  weeks.csv  weeks.txt
.junie/: guidelines.md
NSTstats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
_cache/: nst_team_pk_NA_20252026.parquet  nst_team_pp_NA_20252026.parquet  nst_team_sva_B_20252026.parquet
adapters/: __init__.py  nst.py
alembic/: env.py
app/: cli.py  merger.py  orchestrator.py
application/: analyze.py  avg_compare.py  compare.py  forecast.py  pipelines.py  waiver_agent.py
data/: all_rosters.csv  app.db  compare.csv  forecasts.csv  goalies.csv  goalies_prior.csv  goalies_scored.csv  goalies_scored_prior.csv  lookup_table.csv  lookup_table_2025.csv  merged_goalies.csv  merged_goalies_prior.csv  merged_skaters.csv  merged_skaters_prior.csv  opponent_ease_lookup.csv  opponent_offense_lookup.csv  skaters.csv  skaters_prior.csv  skaters_scored.csv  skaters_scored_prior.csv  team_changes.csv  team_defense_lookup.csv  team_offense_lookup.csv  unmatched_in_compare.csv  unmatched_in_merged.csv  yahoo_daily_player_gp.csv  yahoo_weekly_player_gp.csv  yahoo_weekly_totals.csv
diagnostics/: __init__.py  distributions.py  plots.py  runner.py
docs/: ANALYZE.md  AVG_COMPARE_AND_BACKFILL_GP.md  COMPARE.md  DATA_QUALITY.md  FORECAST.md  JUNIE_GUIDELINES.md  PROCESS.md  SCORING.md  data_dir.xlsx  merge_process.md
domain/: metrics.py
helpers/: extract.py  normalization.py  seasons.py  transform.py
infrastructure/: config.py  persistence.py
nst_app/: admin.py  apps.py  models.py
(+46 files in other folders)
